[gd_scene load_steps=20 format=3 uid="uid://wp5xcajm7wky"]

[ext_resource type="Script" path="res://Script/enemy_member.gd" id="1_6agiw"]
[ext_resource type="Texture2D" uid="uid://blxj1s22wdk50" path="res://Assets/Enemy_Sprites/YCSTA_Enemies-1.png" id="2_g3rx0"]
[ext_resource type="Texture2D" uid="uid://ditkmrdmoscht" path="res://Assets/UI/rotatingarrow.png" id="3_fkv5n"]
[ext_resource type="Texture2D" uid="uid://cvcvbac04nos2" path="res://Assets/UI/YCSTA_healthbar-1.png" id="5_7ffgk"]
[ext_resource type="Texture2D" uid="uid://c70378fp1g0kl" path="res://Assets/UI/YCSTA_healthbar-2.png" id="6_knrq3"]
[ext_resource type="Texture2D" uid="uid://dlws0qyse6xe4" path="res://Assets/arrowshadow.png" id="7_ah8uh"]
[ext_resource type="AudioStream" uid="uid://bg2xrdk3npnsa" path="res://Sounds/spellshort1.wav" id="9_jfdhv"]

[sub_resource type="Animation" id="Animation_roeck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_50v2h"]
resource_name = "bounce"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1.93187, 2.07053, 2.07053),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -1), Vector2(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ym26"]
_data = {
"RESET": SubResource("Animation_roeck"),
"bounce": SubResource("Animation_50v2h")
}

[sub_resource type="Animation" id="Animation_gk4q8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Arrowshadow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xi4en"]
resource_name = "fadein"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Arrowshadow:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sj2t5"]
_data = {
"RESET": SubResource("Animation_gk4q8"),
"fadein": SubResource("Animation_xi4en")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1rmrd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7odug"]
radius = 4.12311

[sub_resource type="Animation" id="Animation_2akjp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vq5j7"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ei3xv"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.392157, 0.392157, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tudjj"]
_data = {
"RESET": SubResource("Animation_2akjp"),
"default": SubResource("Animation_vq5j7"),
"hurt": SubResource("Animation_ei3xv")
}

[node name="Enemy_skull" type="CharacterBody2D" groups=["enemy_m"]]
z_index = 5
collision_layer = 32
collision_mask = 32
script = ExtResource("1_6agiw")
SPEED = 45
hp = 4

[node name="Icon" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
position = Vector2(0, 1)
texture = ExtResource("2_g3rx0")

[node name="Anim" type="AnimationPlayer" parent="Icon"]
libraries = {
"": SubResource("AnimationLibrary_3ym26")
}

[node name="Coloranim" type="AnimationPlayer" parent="Icon"]
libraries = {
"": SubResource("AnimationLibrary_sj2t5")
}

[node name="Rot" type="Node2D" parent="."]
visible = false

[node name="Rotatingarrow" type="Sprite2D" parent="Rot"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("3_fkv5n")

[node name="Healthbar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -5.0
offset_top = -13.0
offset_right = 5.0
offset_bottom = -12.0
max_value = 10.0
value = 10.0
texture_under = ExtResource("5_7ffgk")
texture_progress = ExtResource("6_knrq3")

[node name="HURTbox_Enemy" type="Area2D" parent="."]

[node name="box" type="CollisionShape2D" parent="HURTbox_Enemy"]
shape = SubResource("CircleShape2D_1rmrd")

[node name="Crowdcollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7odug")

[node name="EffectsAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tudjj")
}

[node name="Arrowshadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0)
z_index = -1
texture_filter = 1
position = Vector2(0, 7)
texture = ExtResource("7_ah8uh")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_jfdhv")

[node name="Timers" type="Node" parent="."]

[node name="UpdateTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="area_entered" from="HURTbox_Enemy" to="." method="_on_hur_tbox_enemy_area_entered"]
[connection signal="area_exited" from="HURTbox_Enemy" to="." method="_on_hur_tbox_enemy_area_exited"]
[connection signal="timeout" from="Timers/UpdateTimer" to="." method="_on_update_timer_timeout"]
